PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -133,12 +133,12 @@
     <span class="icon">＋</span>
   </button>
 
- <button disabled class="nav-disabled">
-  <span class="icon">
-    <img src="/icons/analytics.png" class="nav-icon">
-  </span>
-  <span class="label">Analytics</span>
-</button>
+ <button data-page="analytics" onclick="location.href='analytics.html'">
+    <span class="icon">
+      <img src="/icons/analytics.png" alt="Analytics" class="nav-icon">
+    </span>
+    <span class="label">Analytics</span>
+  </button>
 
   <!-- Profile -->
   <button data-page="profile" disabled>
