PWA-ready index.html

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -170,6 +170,16 @@
     }
   });
 </script>
+<script>
+  document.querySelectorAll('.bottom-nav button:not([disabled])')
+    .forEach(btn => {
+      btn.addEventListener('click', () => {
+        if (navigator.vibrate) {
+          navigator.vibrate(12);
+        }
+      });
+    });
+</script>
 
 </body>
 <body class="analytics-page"></body>
