--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -151,6 +151,16 @@ window.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+<script>
+  document.querySelectorAll('.bottom-nav button:not([disabled])')
+    .forEach(btn => {
+      btn.addEventListener('click', () => {
+        if (navigator.vibrate) {
+          navigator.vibrate(12);
+        }
+      });
+    });
+</script>
 
 </body>
 </html>
