--- a/public/workout.html
+++ b/public/workout.html
@@ -166,6 +166,16 @@
     location.href = target;
   }
 </script>
+<script>
+  document.querySelectorAll('.bottom-nav button:not([disabled])')
+    .forEach(btn => {
+      btn.addEventListener('click', () => {
+        if (navigator.vibrate) {
+          navigator.vibrate(12);
+        }
+      });
+    });
+</script>
 
 </body>
 </html>
