--- a/public/view.html
+++ b/public/view.html
@@ -294,10 +294,28 @@ loadWorkouts();
 <script>
   document.querySelectorAll('.bottom-nav button:not([disabled])')
     .forEach(btn => {
-      btn.addEventListener('click', () => {
-        if (navigator.vibrate) {
-          navigator.vibrate(12);
-        }
+
+      // instant tap feedback
+      btn.addEventListener('touchstart', () => {
+        btn.classList.add('tap-active');
+        navigator.vibrate?.(12);
+      });
+
+      btn.addEventListener('touchend', () => {
+        btn.classList.remove('tap-active');
+      });
+
+      btn.addEventListener('touchcancel', () => {
+        btn.classList.remove('tap-active');
+      });
+
+      // desktop fallback
+      btn.addEventListener('mousedown', () => {
+        btn.classList.add('tap-active');
+      });
+
+      btn.addEventListener('mouseup', () => {
+        btn.classList.remove('tap-active');
       });
     });
 </script>
