PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -92,6 +92,8 @@
 
         <button id="addExercise" type="button">Add Exercise</button>
         <button id="saveWorkout" type="button">Save Workout</button>
+        <button id="clearAll" class="red-btn">Clear All</button>
+
 
         <button class="secondary" type="button" onclick="location.href='view.html'">
           View My Workouts
