PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -196,6 +196,18 @@
       });
     });
 </script>
+<!-- CLEAR WORKOUT CONFIRM MODAL -->
+<div id="clearModal" class="modal hidden">
+  <div class="modal-box">
+    <h3>Clear workout?</h3>
+    <p>This will remove all exercises and sets. This cannot be undone.</p>
+
+    <div class="modal-actions">
+      <button id="cancelClear" class="btn-secondary">Cancel</button>
+      <button id="confirmClear" class="btn-danger">Clear</button>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
